--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mongoose": "^5.9.17",
+    "mongoose": "^5.10.1",
     "morgan": "^1.10.0",
+    "node-sass-middleware": "^0.11.0",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.3.3",
+    "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
   },
